Extend api for account verification
