# backend/licitatie-curieri/src/main/java/ro/fmi/unibuc/licitatie_curieri/controller/UserController.java
@@ -5,10 +5,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.openapitools.api.UserApi;
 import org.openapitools.model.UserCreationDto;
 import org.openapitools.model.UserCreationResponseDto;
+import org.openapitools.model.UserVerificationDto;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import ro.fmi.unibuc.licitatie_curieri.service.UserService;
 import ro.fmi.unibuc.licitatie_curieri.common.utils.LogMessageUtils;
+import ro.fmi.unibuc.licitatie_curieri.service.UserService;
 
 @Slf4j
 @RestController
@@ -22,5 +24,14 @@ public class UserController implements UserApi {
     ) {
         log.info(String.format(LogMessageUtils.CREATE_USER, userCreationDto.getEmail(), userCreationDto.getUserType()));
         return userService.createUser(userCreationDto);
+    }
+
+    @Override
+    public void verifyUser(
+            @PathVariable("email") String email,
+            @RequestBody UserVerificationDto userVerificationDto
+    ) {
+        log.info(String.format(LogMessageUtils.VERIFY_USER, email));
+        userService.verifyUser(email, userVerificationDto);
     }
 }
